syntax = "proto3";

package services;

option java_multiple_files = true;
option java_package = "fima.services.transactionimport";
option java_outer_classname = "TransactionImportServiceProtos";

message ImportTransactionsRequest {
  string transactions = 1;
}

message ImportTransactionsResponse {
}

service TransactionImportService {

  rpc importTransactions(ImportTransactionsRequest) returns (ImportTransactionsResponse) {}

}
